@@ -1,7 +1,6 @@
 package net.fybertech.dynamicmappings.mappers;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
@@ -12,7 +11,6 @@ import java.util.Set;
 import net.fybertech.dynamicmappings.DynamicMappings;
 import net.fybertech.dynamicmappings.Mapping;
 import net.fybertech.dynamicmappings.MappingsClass;
-import net.fybertech.meddle.Meddle;
 import net.fybertech.meddle.MeddleUtil;
 
 import org.objectweb.asm.Opcodes;
@@ -21,7 +19,6 @@ import org.objectweb.asm.tree.AbstractInsnNode;
 import org.objectweb.asm.tree.ClassNode;
 import org.objectweb.asm.tree.FieldInsnNode;
 import org.objectweb.asm.tree.FieldNode;
-import org.objectweb.asm.tree.LdcInsnNode;
 import org.objectweb.asm.tree.MethodInsnNode;
 import org.objectweb.asm.tree.MethodNode;
 import org.objectweb.asm.tree.TypeInsnNode;
@@ -320,41 +317,64 @@ public class ClientMappings extends MappingsBase
 	}
 
 
-	@Mapping(provides="net/minecraft/client/renderer/ItemModelMesher", depends="net/minecraft/client/renderer/entity/RenderItem")
-	public boolean getItemModelMesherClass() 
+	@Mapping(provides= {
+			"net/minecraft/client/renderer/ItemModelMesher",
+			"net/minecraft/client/renderer/ModelManager",
+			"net/minecraft/client/renderer/texture/TextureManager",
+			"net/minecraft/client/renderer/color/ItemColors",
+			"net/minecraft/client/resources/IResourceManagerReloadListener",
+			"net/minecraft/client/resources/IResourceManager"
+			},
+			providesMethods = {
+			"net/minecraft/client/resources/IResourceManagerReloadListener onResourceManagerReload (Lnet/minecraft/client/resources/IResourceManager;)V"
+			},
+			depends={
+			"net/minecraft/client/renderer/entity/RenderItem"
+			}
+			)
+	public boolean processRenderItemClass()
 	{
 		ClassNode renderItem = getClassNodeFromMapping("net/minecraft/client/renderer/entity/RenderItem");
-		if (renderItem == null) return false;
+		if(!MeddleUtil.notNull(renderItem)) return false;
 
-		// Find constructor RenderItem(TextureManager, ModelManager)
-		MethodNode initMethod = null;
-		int count = 0;
-		for (MethodNode method : (List<MethodNode>)renderItem.methods) {
-			if (!method.name.equals("<init>")) continue;
-			if (!DynamicMappings.checkMethodParameters(method, Type.OBJECT, Type.OBJECT, Type.OBJECT)) continue;
-			count++;
-			initMethod = method;
-		}
-		if (count != 1) return false;
 
-		Type t = Type.getMethodType(initMethod.desc);
-		Type[] args = t.getArgumentTypes();
-		// TODO: Get TextureManager and ModelManager from args
-
-		String className = null;
-
-		count = 0;
-		for (AbstractInsnNode insn = initMethod.instructions.getFirst(); insn != null; insn = insn.getNext()) {
-			if (insn.getOpcode() == Opcodes.NEW) {
-				TypeInsnNode tn = (TypeInsnNode)insn;
-				className = tn.desc;
-				count++;
+		List<String> interfaces = renderItem.interfaces;
+		if(interfaces.size() == 1){
+			ClassNode node = getClassNode(interfaces.get(0));
+			if(node != null && node.methods.size() == 1){
+				addClassMapping("net/minecraft/client/resources/IResourceManagerReloadListener", node);
+				addClassMapping("net/minecraft/client/resources/IResourceManager", Type.getArgumentTypes(node.methods.get(0).desc)[0].getClassName());
+				addMethodMapping("net/minecraft/client/resources/IResourceManagerReloadListener onResourceManagerReload (Lnet/minecraft/client/resources/IResourceManager;)V", node.name + " " + node.methods.get(0).name + " " + node.methods.get(0).desc);
 			}
 		}
-		if (count != 1 || className == null) return false;
 
-		// We'll assume this is it, might do more detailed confirmations later if necessary
-		addClassMapping("net/minecraft/client/renderer/ItemModelMesher", getClassNode(className));
+
+		List<MethodNode> methods = getMatchingMethods(renderItem, Opcodes.ACC_PUBLIC, Type.VOID, Type.OBJECT, Type.OBJECT, Type.OBJECT);
+		if(methods.size() == 1){
+			List<ClassNode> argumentClasses = getClassNodesFromMethodArguments(methods.get(0));
+			if(argumentClasses.size() == 3){
+				//TextureManager
+				ClassNode cn = argumentClasses.get(0);
+				if(searchConstantPoolForStrings(cn.name, "Failed to load texture: {}", "Resource location being registered", "Texture object class")){
+					addClassMapping("net/minecraft/client/renderer/texture/TextureManager", cn);
+					cn = null;
+				}
+				//ModelManager
+				if(cn == null){ //To be safe that the mapping for TextureManager has worked
+					addClassMapping("net/minecraft/client/renderer/ModelManager", argumentClasses.get(1));
+				}
+				//ItemColors
+				if(cn == null){ //To be safe that the mapping for TextureManager has worked. Can't take 'Colors' as String, cause it isn't in the class itself
+					addClassMapping("net/minecraft/client/renderer/color/ItemColors", argumentClasses.get(2));
+				}
+			}
+		}
+
+		methods = getMatchingMethods(renderItem, Opcodes.ACC_PUBLIC, Type.OBJECT);
+		if(methods.size() == 1){
+			addClassMapping("net/minecraft/client/renderer/ItemModelMesher", Type.getReturnType(methods.get(0).desc).getClassName());
+		}
+
 		return true;
 	}
 
@@ -1025,57 +1045,34 @@ public class ClientMappings extends MappingsBase
 			"net/minecraft/client/gui/Gui drawString (Lnet/minecraft/client/gui/FontRenderer;Ljava/lang/String;III)V"
 			},
 			depends={
-			"net/minecraft/client/gui/GuiMainMenu",
-			"net/minecraft/client/gui/GuiScreen",
 			"net/minecraft/client/gui/Gui",
-			"net/minecraft/client/Minecraft",
 			"net/minecraft/client/gui/FontRenderer"
 			})			
 	public boolean processGuiMainMenuClass()
 	{
-		ClassNode guiMainMenu = getClassNodeFromMapping("net/minecraft/client/gui/GuiMainMenu");
-		ClassNode guiScreen = getClassNodeFromMapping("net/minecraft/client/gui/GuiScreen");
 		ClassNode gui = getClassNodeFromMapping("net/minecraft/client/gui/Gui");
-		ClassNode minecraft = getClassNodeFromMapping("net/minecraft/client/Minecraft");
 		ClassNode fontRenderer = getClassNodeFromMapping("net/minecraft/client/gui/FontRenderer");
-		if (!MeddleUtil.notNull(guiMainMenu, guiScreen, gui, minecraft, fontRenderer)) return false;		
-	
-		String drawScreenDesc = "net/minecraft/client/gui/GuiScreen drawScreen (IIF)V";
-		MethodNode drawScreenMethod = DynamicMappings.getMethodNodeFromMapping(guiMainMenu, drawScreenDesc);
-		if (drawScreenMethod == null) return false;
-		
-		String drawStringMethodsDesc = "(L" + fontRenderer.name + ";Ljava/lang/String;III)V";
-		
-		String getStringWidthName = null;
-		String drawCenteredStringName = null;
-		String drawStringName = null;
-		
-		for (AbstractInsnNode insn = drawScreenMethod.instructions.getFirst(); insn != null; insn = insn.getNext()) {
-			if (insn.getOpcode() != Opcodes.INVOKEVIRTUAL) continue;
-			MethodInsnNode mn = (MethodInsnNode)insn;
-			
-			if (getStringWidthName == null && mn.owner.equals(fontRenderer.name) && mn.desc.equals("(Ljava/lang/String;)I")) {
-				getStringWidthName = mn.name;
-				addMethodMapping("net/minecraft/client/gui/FontRenderer getStringWidth (Ljava/lang/String;)I",
-						fontRenderer.name + " " + mn.name + " " + mn.desc);
-			}
-			
-			if (mn.owner.equals(guiMainMenu.name)  && mn.desc.equals(drawStringMethodsDesc)) {
-				if (drawCenteredStringName == null) {
-					drawCenteredStringName = mn.name;
-					addMethodMapping("net/minecraft/client/gui/Gui drawCenteredString (Lnet/minecraft/client/gui/FontRenderer;Ljava/lang/String;III)V",
-							gui.name + " " + mn.name + " " + mn.desc);
-				}
-				else if (drawStringName == null) {
-					drawStringName = mn.name;
-					addMethodMapping("net/minecraft/client/gui/Gui drawString (Lnet/minecraft/client/gui/FontRenderer;Ljava/lang/String;III)V",
-							gui.name + " " + mn.name + " " + mn.desc);
-				}
-			}
+		if (!MeddleUtil.notNull(gui,fontRenderer)) return false;
+
+		//TODO move to other methods because of the name
+
+		List<MethodNode> methods = getMatchingMethods(gui, null, assembleDescriptor("(", fontRenderer, "Ljava/lang/String;III)V"));
+		if(methods.size() == 2){
+			//Gui drawCenteredString
+			addMethodMapping("net/minecraft/client/gui/Gui drawCenteredString (Lnet/minecraft/client/gui/FontRenderer;Ljava/lang/String;III)V",
+					gui.name + " " + methods.get(0).name + " " + methods.get(0).desc);
+			//Gui drawString
+			addMethodMapping("net/minecraft/client/gui/Gui drawString (Lnet/minecraft/client/gui/FontRenderer;Ljava/lang/String;III)V",
+					gui.name + " " + methods.get(1).name + " " + methods.get(1).desc);
 		}
-		
-		
-		
+
+		methods = getMatchingMethods(fontRenderer, null, "(Ljava/lang/String;)I");
+		if(methods.size() == 1){
+			//FontRenderer getStringWidth
+			addMethodMapping("net/minecraft/client/gui/FontRenderer getStringWidth (Ljava/lang/String;)I",
+					fontRenderer.name + " " + methods.get(0).name + " " + methods.get(0).desc);
+		}
+
 		return true;
 	}
 	
@@ -3299,100 +3296,44 @@ public class ClientMappings extends MappingsBase
 		
 		return true;
 	}
-	
-	
-	@Mapping(depends={
-			"net/minecraft/client/renderer/entity/RenderItem",
-			"net/minecraft/init/Items",
-			"net/minecraft/item/ItemStack"
-			},
-			providesMethods={
-			"net/minecraft/client/renderer/color/IItemColor getItemColor (Lnet/minecraft/item/ItemStack;I)I"	
-			},
-			provides={
-			"net/minecraft/client/renderer/texture/TextureManager",
-			//TODO - "net/minecraft/client/renderer/block/model/ModelManager",
-			"net/minecraft/client/renderer/color/ItemColors",
-			"net/minecraft/client/renderer/color/IItemColor"
-			}
-	)
-	public boolean processRenderItemClass()
-	{
-		ClassNode renderItem = getClassNodeFromMapping("net/minecraft/client/renderer/entity/RenderItem");
-		ClassNode items = getClassNodeFromMapping("net/minecraft/init/Items");
-		ClassNode itemStack = getClassNodeFromMapping("net/minecraft/item/ItemStack");
-		if (renderItem == null || items == null || itemStack == null) return false;
-		
-		List<MethodNode> methods = getMatchingMethods(renderItem, "<init>", null);
-		if (methods.size() == 1) {
-			Type t = Type.getMethodType(methods.get(0).desc);
-			Type[] args = t.getArgumentTypes();
-			
-			if (args.length == 3) {				
-				String textureManagerName = args[0].getClassName();
-				String modelManagerName = args[1].getClassName();
-				String itemColorsName = args[2].getClassName();
-				
-				if (searchConstantPoolForStrings(textureManagerName, "Failed to load texture: {}", "Registering texture")) {
-					addClassMapping("net/minecraft/client/renderer/texture/TextureManager", textureManagerName);
-				}				
-				
-				if (searchConstantPoolForClasses(itemColorsName, items.name)) {
-					ClassNode itemColors = getClassNode(itemColorsName);	
-					String descriptor = assembleDescriptor("(", itemStack, "I)I");
-					methods = getMatchingMethods(itemColors, null, descriptor);
-					if (methods.size() == 1) {						
-						// Look for methods invoked with the same signature as the method we're in
-						List<MethodInsnNode> mns = getAllInsnNodesOfType(methods.get(0), MethodInsnNode.class);
-						for (Iterator<MethodInsnNode> it = mns.iterator(); it.hasNext();) {							
-							MethodInsnNode mn = it.next();
-							if (!mn.desc.equals(descriptor)) it.remove();
-						}
-						if (mns.size() == 1) {
-							ClassNode iitemColor = getClassNode(mns.get(0).owner);
-							if ((iitemColor.access & Opcodes.ACC_INTERFACE) != 0 && iitemColor.methods.size() == 1) {
-								addClassMapping("net/minecraft/client/renderer/color/IItemColor", iitemColor.name);
-								addClassMapping("net/minecraft/client/renderer/color/ItemColors", itemColorsName);
-								addMethodMapping("net/minecraft/client/renderer/color/IItemColor getItemColor (Lnet/minecraft/item/ItemStack;I)I",
-										iitemColor.name + " " + iitemColor.methods.get(0).name + " " + descriptor);
-							}
-						}
-					}
-				}
-			}
-		}
-		
-		
-		return true;
-	}
-	
-	
+
 	@Mapping(depends={
 			"net/minecraft/client/renderer/color/ItemColors",
-			"net/minecraft/client/renderer/color/IItemColor",
 			"net/minecraft/item/ItemStack",
 			"net/minecraft/item/Item",
 			"net/minecraft/block/Block"
 			},
+			provides = {
+			"net/minecraft/client/renderer/color/IItemColor"
+			},
 			providesMethods={
 			"net/minecraft/client/renderer/color/ItemColors getItemColor (Lnet/minecraft/item/ItemStack;I)I",
 			"net/minecraft/client/renderer/color/ItemColors registerBlockColor (Lnet/minecraft/client/renderer/color/IItemColor;[Lnet/minecraft/block/Block;)V",
-			"net/minecraft/client/renderer/color/ItemColors registerItemColor (Lnet/minecraft/client/renderer/color/IItemColor;[Lnet/minecraft/item/Item;)V"
+			"net/minecraft/client/renderer/color/ItemColors registerItemColor (Lnet/minecraft/client/renderer/color/IItemColor;[Lnet/minecraft/item/Item;)V",
+			"net/minecraft/client/renderer/color/IItemColor getItemColor (Lnet/minecraft/item/ItemStack;I)I"
 			}			
 	)
 	public boolean processItemColorClass()
 	{
 		ClassNode itemColors = getClassNodeFromMapping("net/minecraft/client/renderer/color/ItemColors");
-		ClassNode iitemColor = getClassNodeFromMapping("net/minecraft/client/renderer/color/IItemColor");
+		ClassNode iitemColor = null;
 		ClassNode itemStack = getClassNodeFromMapping("net/minecraft/item/ItemStack");
 		ClassNode item = getClassNodeFromMapping("net/minecraft/item/Item");
 		ClassNode block = getClassNodeFromMapping("net/minecraft/block/Block");
-		if (!MeddleUtil.notNull(itemColors, iitemColor, itemStack, item, block)) return false;
-		
+		if (!MeddleUtil.notNull(itemColors, itemStack, item, block)) return false;
+
 		List<MethodNode> methods = getMatchingMethods(itemColors, null, assembleDescriptor("(", itemStack, "I)I"));
 		if (methods.size() == 1) { 
 			addMethodMapping("net/minecraft/client/renderer/color/ItemColors getItemColor (Lnet/minecraft/item/ItemStack;I)I",
 					itemColors.name + " " + methods.get(0).name + " " + methods.get(0).desc);
+		}
+
+		methods = getMatchingMethods(itemColors, Opcodes.ACC_PUBLIC, Type.VOID, Type.OBJECT, Type.ARRAY);
+		if(methods.size() == 2){
+			addClassMapping("net/minecraft/client/renderer/color/IItemColor", Type.getArgumentTypes(methods.get(0).desc)[0].getClassName());
+			iitemColor = getClassNodeFromMapping("net/minecraft/client/renderer/color/IItemColor");
+			addMethodMapping("net/minecraft/client/renderer/color/IItemColor getItemColor (Lnet/minecraft/item/ItemStack;I)I",
+					iitemColor.name + " " + methods.get(0).name + " " + methods.get(0).desc);
 		}
 		
 		methods = getMatchingMethods(itemColors, null, assembleDescriptor("(", iitemColor, "[", block, ")V"));
